--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -81,7 +81,7 @@
                         <div class="detalle">
                             <div class="price-and-discount">
                                 <p class="price">$<%= product.price %></p>
-                                <% if(product.descuento > 0){%>
+                                <% if(product.discount > 0){%>
                                 <p class="discount"><%= product.discount*100 + '% OFF' %></p>
                                 <%}%>
                                 <i class="fa-solid fa-cart-shopping"></i>
